been updating brushed metal.. MUCH sexier now :)

-------------------------------------------------------------------------------

Thu Sep  2 15:53:53 PDT 1999
(Raster)

more updates on brushed metal.. :)

-------------------------------------------------------------------------------

Thu Sep  2 17:03:39 PDT 1999
(Mandrake)

some more KDE work.  getting closer

-------------------------------------------------------------------------------

Thu Sep  2 17:00:15 PDT 1999
(Raster)

and more changes to bushed metal.. pretty much done now.. and added a 
label in settings dialogs

-------------------------------------------------------------------------------

Thu Sep  2 17:13:45 PDT 1999
(Raster)

added patch from duncan for mirror group properties - also added mroe padding 
in dialog ok/etrc. buttons for theme :)

-------------------------------------------------------------------------------

Fri Sep  3 15:05:50 PDT 1999
(Raster)

fixed border togglign if borderless and restarting.. also restart remembers 
borders even if they arent snapshotted (but its onyl thru a restart)

-------------------------------------------------------------------------------

Fri Sep  3 15:52:54 PDT 1999
(Raster)

fix execing of apps :)

-------------------------------------------------------------------------------

Fri Sep  3 16:33:31 PDT 1999
(Raster)

ok - i forgot if i edited something....

-------------------------------------------------------------------------------

Sat Sep  4 00:35:38 PDT 1999
(Raster)

draw queue for handling expoes on dialogs.. more efficient drawing for dialogs
AND now no drawing bugs in non opaque move and resize modes :)

-------------------------------------------------------------------------------

Sat Sep  4 00:41:49 PDT 1999
(Raster)

update TOTO buglist.... ooh its getting short.. :)

-------------------------------------------------------------------------------

Sat Sep  4 08:19:25 PDT 1999
(Raster)

fixed makefile.am to not nuke interactive.sh